src/components/App.less
body {
  margin: 0px;
  font-family: 'Josefin Sans', sans-serif;
  height: 100vh;
  overflow: hidden;
}

.App {
  overflow: hidden;
  background-image: linear-gradient(-20deg, #d558c8 0%, #24d292 100%);
  max-width: 375px;
  max-height: 950px;
  position: relative;
  height: 100vh;
  margin: 0 auto;
}

.page {
  height: 100vh;
  padding: calc(15% + 1.5em) 5% 5%;
  overflow-y: auto;
  position: fixed;
  top: 0;
  width: 100%;
  -webkit-overflow-scrolling: touch;
  transition: transform 1s ease-in-out;
}

.page-enter {
  transform: translate(-100%, 0);
}
.page-enter-active {
  transform: translate(0, 0);
}
.page-exit {
  transform: translate(-100%, 0);
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

